<resources>
    <string name="app_name">NewsQu</string>
    <string name="title">NEWSQU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_author">NBA</string>
    <string name="dummy_news_title">Curry scores 23 in return, but Warriors fall to Raptors</string>
    <string name="dummy_write_time">3 hours ago</string>
    <string name="no_image">Image not found</string>
    <string name="send">SEND</string>
    <string name="bookmark">bookmark</string>
    <string name="john_doe">John Doe</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\nit is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="transition_image_article">transitionImageArticle</string>
    <string name="transition_title_article">transitionTitleArticle</string>
    <string name="transition_author_article">transitionAuthorArticle</string>
    <string name="share">Share</string>
    <string name="no_internet">No Internet connection</string>
    <string name="retry">retry</string>
    <string name="bookmark_fragment">Bookmark Fragment</string>
    <string name="search_news_fragment">Search News Fragment</string>
    <string name="transition_image_article_list">transitionImageArticleList</string>
    <string name="article_image">Article Image</string>
    <string name="search">Search...</string>
</resources>