<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_margin="10dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="2dp"
    app:contentPadding="15dp"
    app:cardBackgroundColor="@color/tertiary_dark"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_author"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:src="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="15dp" />

        <TextView
            android:id="@+id/txt_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/dummy_author"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="@+id/iv_author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_author"
            app:layout_constraintTop_toTopOf="@+id/iv_author" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/dummy_news_title"
            android:textColor="@color/white"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_author"/>

        <TextView
            android:id="@+id/txt_write_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_write_time"
            android:layout_marginTop="10dp"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            app:layout_constraintStart_toStartOf="parent"/>
        
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_news"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:riv_corner_radius="15dp"
            android:src="@color/gray"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/txt_write_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txt_noimage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/no_image"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/iv_news"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_news" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_share"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:rippleColor="@null"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="1dp"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            app:icon="@drawable/ic_share"
            app:iconTint="@color/gray"
            app:iconPadding="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_news"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>