<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_dark"
    tools:context=".ui.DetailNewsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.tistory.zladnrms.roundablelayout.RoundableLayout
                android:id="@+id/container_title"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toTopOf="parent"
                app:backgroundColor="@color/tertiary_dark"
                app:cornerLeftBottom="30dp"
                app:cornerRightBottom="30dp">

                <ImageView
                    android:id="@+id/iv_article"
                    android:transitionName="@string/transition_image_article"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@color/primary_dark"/>

                <TextView
                    android:id="@+id/txt_title"
                    android:transitionName="@string/transition_title_article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/rubik_medium"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:text="Bucks-Suns NBA Finals score, takeaways: Giannis Antetokounmpo goes for 40-10 again, Milwaukee rolls in Game 3 - CBSSports.com"
                    android:textColor="@color/white"
                    android:background="@drawable/gradient_news_title"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </com.tistory.zladnrms.roundablelayout.RoundableLayout>

            <View
                android:id="@+id/space_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="20dp"
                app:rippleColor="@color/ripple_back_button"
                app:cardBackgroundColor="#4D4C4C4C"
                app:cardElevation="0dp"
                android:layout_margin="15dp"
                app:layout_constraintTop_toBottomOf="@id/space_view"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_back"
                    app:tint="@color/white"
                    android:padding="10dp"/>

            </com.google.android.material.card.MaterialCardView>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_author"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:riv_corner_radius="25dp"
                android:src="@drawable/ic_dupat"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/container_title"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                app:layout_constraintStart_toEndOf="@id/iv_author"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/iv_author"
                app:layout_constraintTop_toTopOf="@id/iv_author">

                <TextView
                    android:id="@+id/txt_author"
                    android:transitionName="@string/transition_author_article"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:text="@string/john_doe"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik_medium"/>

                <TextView
                    android:id="@+id/txt_created_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="March 6, 2020"
                    android:textSize="14sp"
                    android:textColor="@color/gray"/>

            </LinearLayout>

            <TextView
                android:id="@+id/txt_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/white"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:layout_marginRight="15dp"
                android:lineSpacingExtra="5dp"
                android:textSize="17sp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_author"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/tertiary_dark"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:hideOnScroll="true"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/send"
                android:textColor="@color/white"
                app:icon="@drawable/ic_share"
                app:iconTint="@color/white"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_bookmark"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/bookmark"
                android:textColor="@color/white"
                app:icon="@drawable/ic_bookmark_outlined"
                app:iconTint="@color/white"
                android:layout_marginRight="10dp"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_send"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>